--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -23,6 +23,7 @@
     left: 5%;
     position: absolute;
     color: $white;
+    z-index: 2;
   }
 
   &::before {
@@ -35,6 +36,7 @@
     height: 100%;
     background-color: #0009;
     transition: 0.2s linear;
+    z-index: 1;
   }
   &--main::before {
     background-color: rgba(0, 0, 0, 0.15);
